# HanziWriter

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  file.cpp  file.h  hanzi.cpp  hanzi.h  info.cpp  info.h  main.cpp  sstring.cpp  sstring.h  tools.cpp  tools.h  utf8.cpp  utf8.h
resource/: HanziWriter  hanzi.txt
resource/data/: 中  乐  亲  国  妈  庆  快  母  节  ！  ，
